Fix alignment on card-horizontal, move padding to card-row, update docs

--- a/packages/clay/src/scss/lr7-bootstrap-theme/_cards.scss
+++ b/packages/clay/src/scss/lr7-bootstrap-theme/_cards.scss
@@ -1,8 +1,5 @@
 .card, .card-horizontal {
-	@include box-shadow($card-box-shadow);
-
 	margin-bottom: 20px;
-	overflow: hidden;
 
 	&.card-circle {
 		@include border-radius(20px);
@@ -31,6 +28,12 @@
 			width: 40px;
 		}
 	}
+}
+
+.card {
+	@include box-shadow($card-box-shadow);
+
+	overflow: hidden;
 }
 
 .card-btn-group {
@@ -68,20 +71,24 @@
 	position: relative;
 }
 
-.card-horizontal-padded {
-	@extend .card-horizontal;
+.card-row {
+	@include box-shadow($card-box-shadow);
 
+	overflow: hidden;
+
+	&.card-row-padded .card-col-gutters {
+			&:first-child {
+				padding-left: 0;
+			}
+
+			&:last-child {
+				padding-right: 0;
+			}
+		}
+}
+
+.card-row-padded {
 	padding: 10px;
-
-	.card-row .card-col-gutters {
-		&:first-child {
-			padding-left: 0;
-		}
-
-		&:last-child {
-			padding-right: 0;
-		}
-	}
 }
 
 @for $i from 1 through $grid-columns {
